python/ql/test/2/extractor-tests/syntax_error/Test.ql
import python

from SyntaxError s
select s.toString()
